--- a/UI/Index.html
+++ b/UI/Index.html
@@ -7,7 +7,7 @@
   <!-- Privacy + CSP -->
   <meta name="referrer" content="no-referrer">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self';">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="UI/styles.css">
 </head>
 <body spellcheck="false">
   <div class="box">
@@ -25,6 +25,6 @@
   <script src="Modules/secure-transport-ultra.js" defer></script>
   <script src="Modules/native-url-launcher.js" defer></script>
   <!-- Main UI / config loader -->
-  <script src="search.js" defer></script>
+  <script src="UI/search.js" defer></script>
 </body>
 </html>
