--- a/UI/Index.html
+++ b/UI/Index.html
@@ -6,7 +6,8 @@
   <title>KrySearch</title>
   <!-- Privacy + CSP -->
   <meta name="referrer" content="no-referrer">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self';">
+<meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; script-src 'self'; script-src-elem 'self'; style-src 'self';">
   <link rel="stylesheet" href="UI/styles.css">
 </head>
 <body spellcheck="false">
