--- a/UI/Index.html
+++ b/UI/Index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KrySearch</title>
+  <link rel="icon" type="image/png" href="lgoo.png">
   <meta name="description" content="KrySearch – The privacy-first search router. Access any website or search engine safely, without tracking, profiling, or third-party interference. Open-source friendly, fully customizable, and optimized for security and anonymity.">
   <!-- Open Graph / social media -->
 <meta property="og:title" content="KrySearch">
 <meta property="og:description" content="KrySearch – The privacy-first search router. Access any website or search engine safely, without tracking, profiling, or third-party interference. Open-source friendly, fully customizable, and optimized for security and anonymity.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://krysearch.io">
-<meta property="og:image" content="assets/logo.png">
-<link rel="icon" type="image/svg+xml" href="assets/logo.png">
+<meta property="og:image" content="lgoo.png">
+<link rel="icon" type="image/svg+xml" href="lgoo.png">
   <!-- Privacy + CSP -->
   <meta name="referrer" content="no-referrer">
 <meta http-equiv="Content-Security-Policy" 
