--- a/UI/Index.html
+++ b/UI/Index.html
@@ -12,11 +12,9 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://krysearch.io">
 <meta property="og:image" content="lgoo.png">
-<link rel="icon" type="image/svg+xml" href="lgoo.png">
   <!-- Privacy + CSP -->
   <meta name="referrer" content="no-referrer">
-<meta http-equiv="Content-Security-Policy" 
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; script-src-elem 'self'; style-src 'self'; img-src 'self' data:;">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body spellcheck="false">
