--- a/UI/index.html
+++ b/UI/index.html
@@ -19,7 +19,7 @@
 
   <!-- CSP (GitHub Pages-safe, allow scripts from self) -->
 <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' https://raw.githubusercontent.com;">
+      content="default-src 'self'; connect-src 'self' https://ipv6.test-ipv6.com; script-src 'self'; style-src 'self'; img-src 'self' https://raw.githubusercontent.com;">
   <!-- Favicon -->
   <link rel="icon" type="image/png"
         href="https://github.com/Bloodware-Inc/KrySearch/blob/main/lgoo.png?raw=true">
