--- a/UI/index.html
+++ b/UI/index.html
@@ -19,9 +19,9 @@
 
   <!-- CSP (GitHub Pages-safe, allow scripts from self) -->
 <meta http-equiv="Content-Security-Policy"
-      content="
-        default-src 'self';
-        connect-src 'self' https://ipv6.test-ipv6.com https://dns.quad9.net;
+      content="default-src 'self'; 
+        script-src 'self'; 
+        connect-src 'self' https://dns.quad9.net https://api64.ipify.org;
         script-src 'self';
         style-src 'self';
         img-src 'self' https://raw.githubusercontent.com;
