--- a/UI/index.html
+++ b/UI/index.html
@@ -24,8 +24,7 @@
         connect-src 'self' https://dns.quad9.net https://api64.ipify.org;
         script-src 'self';
         style-src 'self';
-        img-src 'self' https://raw.githubusercontent.com;
-      ">
+        img-src 'self' https://raw.githubusercontent.com;">
   <!-- Favicon -->
   <link rel="icon" type="image/png"
         href="https://github.com/Bloodware-Inc/KrySearch/blob/main/lgoo.png?raw=true">
