Update JavaScript license information table
Signed-off-by: ΣΝΛ <78288792+4zx16@users.noreply.github.com>

--- a/UI/js-licenses.html
+++ b/UI/js-licenses.html
@@ -5,44 +5,46 @@
   <title>JavaScript License Information</title>
 </head>
 <body>
+
 <h1>JavaScript License Information</h1>
+
 <p>
 All JavaScript used by KrySearch is Free Software.
-Source code is publicly available and licensed under GPL-3.0-or-later.
+All source code is licensed under
+<a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0-or-later</a>
+and is publicly available.
 </p>
-<table border="1" cellpadding="6">
+
+<table id="jslicense-labels1" border="1" cellpadding="6">
   <tr>
-    <th>Script</th>
+    <th>JavaScript file</th>
     <th>License</th>
     <th>Source</th>
   </tr>
-  <tr>
-    <td>index.js</td>
-    <td>
-      <a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a>
-    </td>
-    <td>
-      <a href="https://github.com/Bloodware-Inc/KrySearch">GitHub</a>
-    </td>
-  </tr>
+
+  <!-- Core -->
   <tr>
     <td>search.js</td>
-    <td>
-      <a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a>
-    </td>
-    <td>
-      <a href="https://github.com/Bloodware-Inc/KrySearch">GitHub</a>
-    </td>
+    <td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td>
+    <td><a href="https://github.com/Bloodware-Inc/KrySearch/blob/main/search.js">Source</a></td>
   </tr>
-  <tr>
-    <td>/Modules/*.js</td>
-    <td>
-      <a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a>
-    </td>
-    <td>
-      <a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/plugins">GitHub</a>
-    </td>
-  </tr>
+
+  <!-- Modules -->
+  <tr><td>Modules/privacy.clean.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/privacy.hardening.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/feature-lockdown.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/total-fingerprint-hardening.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/ultra-adaptive-quad9-doh.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/privacy.fingerprint.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/secure-transport-ultra.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/native-url-launcher.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/absolute-url-lockdown-max.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/query-param-lockdown.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/zero-knowledge.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/zk-gsb-equivalent.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+  <tr><td>Modules/zk-libredirect-advanced.js</td><td><a href="https://www.gnu.org/licenses/gpl-3.0.html">GPL-3.0+</a></td><td><a href="https://github.com/Bloodware-Inc/KrySearch/tree/main/Modules">Source</a></td></tr>
+
 </table>
+
 </body>
 </html>
