--- a/UI/index.html
+++ b/UI/index.html
@@ -22,7 +22,7 @@
     <button id="go">Go</button>
     <div class="meta" id="status">Private search mode</div>
     <footer>
-      <p>Powered by <a href="https://Krynet.ai" target="_blank">Krynet, LLC</a></p>
+      <p>Powered by <a href="?url=https://Krynet.ai" target="_blank">Krynet, LLC</a></p>
     </footer>
   </div>
   <noscript>
